--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.laupdev.yourdictionary">
+    package="com.laupdev.yocabulary">
 
     <application
-        android:name=".application.DictionaryApplication"
+        android:name="com.laupdev.yocabulary.application.DictionaryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YourDictionary">
-        <activity android:name=".SearchableActivity">
+        android:theme="@style/Theme.Yocabulary">
+        <activity android:name="com.laupdev.yocabulary.SearchableActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -19,7 +19,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name="com.laupdev.yocabulary.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
