--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def fragment_version = '1.3.5'
 
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2")
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3")
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -59,4 +60,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // Moshi
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    // Retrofit with Moshi Converter
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 }
