--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.laupdev.yocabulary">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="com.laupdev.yocabulary.application.DictionaryApplication"
         android:allowBackup="true"
