--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         nav_version = "2.3.5"
         room_version = "2.3.0"
         lifecycle_version = "2.3.1"
+        retrofit_version = "2.9.0"
     }
     repositories {
         google()
