--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Yocabulary">
-        <activity android:name="com.laupdev.yocabulary.SearchableActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
+<!--        <activity-->
+<!--            android:name="com.laupdev.yocabulary.SearchableActivity"-->
+<!--            android:launchMode="singleTop">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.SEARCH" />-->
+<!--            </intent-filter>-->
 
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-        </activity>
-        <activity
-            android:name="com.laupdev.yocabulary.ui.MainActivity"
-            android:screenOrientation="portrait">
+<!--            <meta-data-->
+<!--                android:name="android.app.searchable"-->
+<!--                android:resource="@xml/searchable" />-->
+<!--        </activity>-->
+        <activity android:name="com.laupdev.yocabulary.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+<!--                <action android:name="android.intent.action.SEARCH" />-->
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:value=".SearchableActivity" />
         </activity>
     </application>
 
