--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.5.0"
+        kotlin_version = "1.5.20"
         nav_version = "2.3.5"
         room_version = "2.3.0"
         lifecycle_version = "2.3.1"
         retrofit_version = "2.9.0"
+        fragment_version = "1.3.6"
     }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
