Implemented Hilt DI, fixed UI bug with recyclerView in fragment_word_list.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -66,4 +67,8 @@ dependencies {
     implementation("androidx.viewpager2:viewpager2:1.0.0")
     //Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+    //Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
 }
