--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = "1.5.20"
+        kotlin_version = "1.5.30"
         nav_version = "2.3.5"
         room_version = "2.3.0"
         lifecycle_version = "2.3.1"
         retrofit_version = "2.9.0"
         fragment_version = "1.3.6"
+        hilt_version = '2.38.1'
     }
     repositories {
         google()
@@ -16,6 +17,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        //Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
