--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+    //JUnit 4 framework
+    testImplementation("junit:junit:4.13.2")
+    //Robolectric environment
+    testImplementation('androidx.test:core:1.4.0')
+    //Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     // LiveData
